objects/Urgent_Message__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <label>Banner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
                <value>
                    <fullName>MHF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_In_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the message will also be displayed in the community for the associated business unit</description>
        <inlineHelpText>When checked, the message will also be displayed in the community for the associated business unit</inlineHelpText>
        <label>Include In Community</label>
        <type>Checkbox</type>
    </fields>
    <label>Urgent Message</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Urgent Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Urgent Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>